# falcon-rs

./: .gitignore  Cargo.toml
falcon/: Cargo.toml
falcon-sys/: Cargo.toml  build.rs
falcon-sys/src/: lib.rs
falcon/src/: error.rs  kat.rs  keypair.rs  lib.rs  main.rs  params.rs  shake256.rs  signature.rs  wasm.rs
falcon/tests/: kat_tests.rs
pq-stellar-web-demo/src/lib/stellar/: smart-account.ts
stellar-pq/contracts/soroban-falcon-smart-account/: README.md
stellar-pq/contracts/soroban-falcon-smart-account/src/: lib.rs
stellar-soroban/contracts/soroban-falcon-smart-account/: Cargo.toml  README.md
stellar-soroban/contracts/soroban-falcon-smart-account/src/: lib.rs
stellar-soroban/contracts/soroban-falcon-smart-account/test_snapshots/: test_double_init_fails.1.json  test_double_initialization_fails.1.json  test_full_integration_flow.1.json  test_smart_account_initialization.1.json  test_with_32_byte_hash.1.json
stellar-soroban/contracts/soroban-falcon-smart-account/test_snapshots/test/: test_contract_initialization.1.json  test_double_init.1.json  test_initialization.1.json
stellar-soroban/contracts/soroban-falcon-smart-account/tests/: integration.rs
stellar-soroban/contracts/soroban-falcon-smart-account/tests/fixtures/: test_pubkey.hex
stellar-soroban/contracts/soroban-falcon-verifier/: README.md
stellar-soroban/contracts/soroban-falcon-verifier/examples/: verify_testnet.sh
stellar-soroban/contracts/soroban-falcon-verifier/src/: lib.rs  ntt.rs  verify.rs
stellar-soroban/contracts/soroban-falcon-verifier/tests/: integration.rs  kat.rs
stellar-soroban/falcon-web-demo/: .env.example  .gitignore  README.md  index.html  package-lock.json  package.json  tailwind.config.js
stellar-soroban/falcon-web-demo/src/: App.tsx  main.tsx  vite-env.d.ts
stellar-soroban/falcon-web-demo/src/lib/: utils.ts  (+1 more)
(+3 files in other folders)
