[package]
name = "soroban-falcon-smart-account"
version = "0.1.0"
edition = "2021"
publish = false
description = "Falcon-512 signature verifier for OpenZeppelin Soroban Smart Accounts"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
testutils = ["soroban-sdk/testutils"]

[dependencies]
soroban-sdk = "23.4.0"

[dev-dependencies]
soroban-sdk = { version = "23.4.0", features = ["testutils"] }
soroban-falcon-verifier = { path = "../soroban-falcon-verifier", features = ["testutils"] }
hex = "0.4"

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

[profile.release-with-logs]
inherits = "release"
debug-assertions = true
